ninäres -> binäres (spelling)

--- a/presentation/AalborgUniversityBeamer2/AAUsidebartheme.tex
+++ b/presentation/AalborgUniversityBeamer2/AAUsidebartheme.tex
@@ -207,7 +207,7 @@
   \begin{frame}{Position}
    \begin{itemize}
     \item Beschreibt, ob das Argument vor oder nach dem Prädikat steht
-    \item ninäres Feature
+    \item Binäres Feature
    \end{itemize}
    
    \begin{figure}
