edited section "Schwierigkeiten"

--- a/presentation/AalborgUniversityBeamer2/AAUsidebartheme.tex
+++ b/presentation/AalborgUniversityBeamer2/AAUsidebartheme.tex
@@ -278,6 +278,15 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Schwierigkeiten}
+\begin{frame}{Schwierigkeiten}
+	\begin{itemize}
+		\item PropBankChain- und PropBankSplitTreePointer
+		\item Verwendung einer externen PennTreeBank
+		\item einige Feature (bsp. path) nehmen sehr viele Werte an
+		\item Speicherbedarf der Algorithmen J48 und SVM
+	\end{itemize}
+\end{frame}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Experimente}
 \begin{frame}{Setup}
