--- a/presentation/AalborgUniversityBeamer2/AAUsidebartheme.tex
+++ b/presentation/AalborgUniversityBeamer2/AAUsidebartheme.tex
@@ -4,7 +4,7 @@
 \usepackage{qtree}
 \usepackage{xcolor}
 \usepackage[style=numeric-verb]{biblatex}
-\bibliographystyle{plain}
+%\bibliographystyle{plain}
 %\bibliography{Quellen}
 \addbibresource{Quellen.bib}
 
@@ -69,7 +69,7 @@
 
 %\lstset{language=Python}
 % the titlepage
-{\aauwavesbg%
+{\aauwavesbg
 \begin{frame}[plain,noframenumbering] % the plain option removes the sidebar and header from the title page
   \titlepage
 \end{frame}}
@@ -91,11 +91,12 @@
     \item Zuweisung bestimmter Rollen in einem Satz $\Rightarrow$ \\
     \glqq{}Wer tut wem was an?\grqq{}
     \item It operates stores mostly in Iowa and Nebraska
-    \item $ [_{\textbf{Arg0}} It][_{\textbf{Pred}} operates][_{\textbf{Arg1}} stores] [_{\textbf{ArgLoc}} mostly\ in\ Iowa\\ \hspace{20pt} and\ Nebraska]$
+    \item \footnotesize{ $ [_{\textbf{Arg0}} It][_{\textbf{Pred}} operates][_{\textbf{Arg1}} stores][_{\textbf{ArgLoc}} mostly\ in\ Iowa\ and\ Nebraska] $}
   \end{itemize}
+  
 \end{frame}
 
-\subsection{Anwendungsbereich}
+%\subsection{Anwendungsbereich}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Daten}
 \begin{frame}{Daten}
@@ -120,13 +121,22 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}{PropBank}
+	\begin{itemize}
+		\item $ [_{\textbf{ARG0}}\ He][_{\textbf{Predicate}}\ wrote][_{\textbf{ARG1}}\ a\ book] $ 
+		\item $ [_{\textbf{ARG0}}\ He][_{\textbf{Predicate}}\ wrote][_{\textbf{ARG2}}\ about\ them] $
+		\item $ [_{\textbf{ARG0}}\ He][_{\textbf{Predicate}}\ wrote][_{\textbf{ARG3}}\ a\ book\ for\ his\ children] $
+		\item $ \rightarrow $ verschieden Rollen
+	\end{itemize}
+\end{frame}
+
 
 \begin{frame}{Penn Treebank}
   \begin{itemize}
    \item Subkorpus aus WSJ und Brown Corpus, bestehend aus ungefähr 1.000.000 Wörtern
    \item 112.917 Prädikat-Argument Strukturen annotiert nach PropBank-Annotationsschema
    \item 292.975 Instanzen
-   \item wsj/00/wsj\_0001.mrg 1 10 gold publish.01 p---a 10:0-rel 11:0-ARG0
+   \item \footnotesize{ wsj/00/wsj\_0001.mrg 1 10 gold publish.01 p---a 10:0-rel 11:0-ARG0}
           
   \end{itemize}
   
@@ -151,7 +161,7 @@
 \subsection{Problemstellung}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%Todo: Bilder für Klassenverteilung und Features einfügen: PhraseType, Postion, Voice
+
 \section{Umsetzung}
 \subsection{Features}
   \begin{frame}{Features}
@@ -250,7 +260,7 @@
 \begin{frame}{Featureextraktion} 
   \begin{figure}
 	  \begin{center}
-	  	\includegraphics[scale=0.5]{argext_graphic}
+	  	\includegraphics[scale=0.2]{argext_graphic}
 	  \end{center}
   \end{figure}
 \end{frame}
@@ -313,7 +323,8 @@ j48 Tree          & 0.784      	   & 0.786             & 0.781
 
 \begin{frame}{Feature Evaluation}
 
-\begin{frame}{Confusion Matrix (Naive Bayes)}
+% Zwei Frames geöffnet 
+%\begin{frame}{Confusion Matrix (Naive Bayes)}
 
 \begin{table}[h]
 \begin{tabular}{llllllll|l}
@@ -330,6 +341,8 @@ a     & b     & c     & d    & e   & f  & g & h & \textless-- classified as \\ \
 \end{table}
 \end{frame}
 
+
+\begin{frame}{Confusion Matrix (Naive Bayes)}
 \begin{table}[h]
 \begin{tabular}{l|lll|l}
                       & Precision      & Recall         & F-Measure      & F-Measure Change \\ \hline
@@ -357,8 +370,9 @@ a     & b     & c     & d    & e   & f  & g & h & \textless-- classified as \\ \
 	\item genauere Evaluation
 	\item \textit{SVM?}
 	\item Abschlussbericht schreiben
-
 \end{itemize}
+
+\end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Literatur}
 \begin{frame}{Quellen}
@@ -370,7 +384,7 @@ a     & b     & c     & d    & e   & f  & g & h & \textless-- classified as \\ \
 {\aauwavesbg
 \begin{frame}[plain,noframenumbering]
   \finalpage{Vielen Dank für Eure Aufmerksamkeit! \\ Noch Fragen?}
-\end{frame}
+\end{frame}}
 %%%%%%%%%%%%%%%%
 
 \end{document}
