Julian ist ein Gott

--- a/presentation/AalborgUniversityBeamer2/AAUsidebartheme.tex
+++ b/presentation/AalborgUniversityBeamer2/AAUsidebartheme.tex
@@ -98,11 +98,14 @@
 
 %\subsection{Anwendungsbereich}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Daten}
-\begin{frame}{Daten}
+\section{Daten \& Tools}
+\begin{frame}{Daten \& Tools}
   \begin{itemize}
-   \item NLTK
+   \item Python3.4
+   \item NLTK 3.0
    \item PropBank
+   \item PennTreeBank
+   \item Weka 3.7.12
   \end{itemize}
 
 \end{frame}
