--- a/presentation/AalborgUniversityBeamer2/AAUsidebartheme.tex
+++ b/presentation/AalborgUniversityBeamer2/AAUsidebartheme.tex
@@ -101,7 +101,7 @@
 \section{Daten \& Tools}
 \begin{frame}{Daten \& Tools}
   \begin{itemize}
-   \item Python3.4
+   \item Python 3.4
    \item NLTK 3.0
    \item PropBank
    \item PennTreeBank
@@ -145,9 +145,10 @@
 		\item $ [_{\textbf{ARG0}}\ She][_{\textbf{Predicate}}\ writes][_{\textbf{ARG2}}\ about\ headbands] $
 		\item \scalebox{0.899999}{ $ [_{\textbf{ARG0}}\ She][_{\textbf{Predicate}}\ writes][_{\textbf{ARG1}}\ a\ program][_{\textbf{ARG3}}\ for\ BApple\texttrademark] $}
 		\item $ [_{\textbf{ARGM-TMP}}\ Now][_{\textbf{ARG0}}\ she][_{\textbf{Predicate}}\ writes][_{\textbf{ARG1}}\ a\ program] $ 
-		\item $ \rightarrow $ verschieden Rollen
+		\end{itemize}
+		\hspace{10pt} $ \rightarrow $ verschieden Rollen
 		
-	\end{itemize}
+	
 \end{frame}
 
 
@@ -376,7 +377,7 @@ a     & b     & c     & d    & e   & f  & g & h & \textless-- classified as \\ \
 -path                & 0.778          & 0.783          & 0.776          & \textbf{+0.006}  \\
 -phraseType          & 0.735          & 0.747          & 0.733          & -0.037           \\
 -position            & 0.758          & 0.773          & 0.757          & -0.013           \\
--predicate            & 0.717          & 0.732          & 0.716          & \textbf{-0.54}  
+-predicate            & 0.717          & 0.732          & 0.716          & \textbf{-0.054}  
 \end{tabular}
 }
 \end{table}
