Kleine Rechtschreib- und Formattierungsänderungen

--- a/Abschlussbericht/Abschlussbericht.tex
+++ b/Abschlussbericht/Abschlussbericht.tex
@@ -105,8 +105,8 @@ Dabei wurden jedoch alle Instanzen der häufigsten Klasse zugeteilt, was an eine
 \end{table}
 
 Auf dem Development Set konnten wir feststellen, dass wir durch das Entfernen des Path Features bessere Ergebnisse erreichen konnten.
-Auch weitere Versuche das Path Feature zu verbessern, indem wir aufeinanderfolgende, doppelte Kategorien zusammenfassen und nur den Pfad vom Argument aufwärts benutzen, schlugen fehl. \\
-Deshalb ließen wir dieses Feature, obwohl es im Originalpaper mit einbezogen wurde, aus unserer Evaluierung auf dem Testset raus, um ein besseres Ergebnis zu erzielen.
+Auch weitere Versuche das Path Feature zu verbessern, indem wir aufeinanderfolgende, doppelte Kategorien zusammenfassen und nur den Pfad vom Argument aufwärts benutzen, schlugen fehl. Effektiv verschlechterte das Feature sogar unsere Ergebnisse mit einem Abfall auf 0.738 für den Naïve Bayes und 0.838 für den J48-Algorithmus im F-Measure \\
+Deshalb ließen wir dieses Feature, obwohl es im Originalpaper mit einbezogen wurde, aus unserer Evaluierung auf dem Testset raus, um ein besseres Ergebnis zu erzielen. 
 
 
 
